--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -56,7 +56,7 @@
         display: flex;
         justify-content: center;
         font-size: 2em;
-        color: black;
+        color: white !important;
     }
 
     .bi-linkedin {
