--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -123,3 +123,127 @@
         }
     }
 }
+
+@media screen and (min-width: 340px) {
+    .container {
+        display: flex;
+        flex-direction: column; 
+        align-items: center;
+    }
+
+    .header {
+        font-size: 3rem !important;
+        text-align: center;
+        letter-spacing: -2px;
+        color: black;
+        font-family: 'Fira Code', monospace !important;
+    }
+
+    .header span {
+        color: white !important;
+        font-weight: bold;
+    }
+
+    .subtitle {
+        color: white !important;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 1em !important;
+        margin-top: 1%;
+    }
+
+    .learn-more, .resume {
+        color: white;
+        position: relative;
+        border-bottom: 3px solid #00ffff;
+        font-size: 0.85em;
+        margin-bottom: 3%;
+        padding: 0.25em;
+        text-decoration: none;
+    }
+
+    .terminal-container {
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 5%;
+        padding-bottom: 2%;
+        margin: auto;
+        width: 100%;
+    }
+
+    .learn-btns {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 50%;
+    }
+
+    .clear-block {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+        border-bottom-right-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
+        background-color: rgb(255, 255, 255, 0.2);
+        flex-direction: column;
+        height: 40vh;
+        border: 3px solid rgba(255, 255, 255, 0.5);
+        border-top: none;
+    }
+
+    .terminal {
+        background-color: white;
+        border-top-right-radius: 0.5rem;
+        border-top-left-radius: 0.5rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+    }
+
+    .glitch {
+        align-items: center;
+        justify-content: center;
+        text-shadow: 
+            0.025em 0 0 #ff00ff,
+            -0.025em 0 0 #00ffff;
+
+        animation: glitch 1000ms infinite;
+    }
+
+    @keyframes glitch {
+        0% { 
+            text-shadow:
+                0.1em 0 0 #ff00ff,
+                -0.1em 0 0 #00ffff;
+        }
+        14% { 
+            text-shadow:
+                0.1em 0 0 #ff00ff,
+                -0.1em 0 0 #00ffff;
+        }
+        15% { 
+            text-shadow:
+                0.2em 0 0 #ff00ff,
+                -0.2em 0 0 #00ffff;
+        }
+        49% { 
+            text-shadow:
+                0.2em 0 0 #ff00ff,
+                -0.2em 0 0 #00ffff;
+        }
+        50% { 
+            text-shadow:
+                0.1em 0 0 #ff00ff,
+                -0.1em 0 0 #00ffff;
+        }
+        99% { 
+            text-shadow:
+                0.1em 0 0 #ff00ff,
+                -0.1em 0 0 #00ffff;
+        }
+        100% { 
+            text-shadow:
+                0.2em 0 0 #ff00ff,
+                -0.2em 0 0 #00ffff;
+        }
+    }
+}
